# Esp32DmxController

./: .clang-format  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.cspell/: custom-dictionary-workspace.txt
.vscode-cpp-linecount/: README.md  extension.js  package-lock.json  package.json
Documentation/: ClassDiagrams.puml  requirements.md
ReactWebsite/: App.css  App.jsx  index.css  index.html  package-lock.json  package.json
ReactWebsite/components/: Configuration.css  Configuration.jsx  Preset.css  Preset.jsx  PresetEdit.css  PresetEdit.jsx  PresetList.css  PresetList.jsx  ValueEdit.css  ValueEdit.jsx
ReactWebsite/data/: samplePresets.js
main/: CMakeLists.txt  artnet_sender.cpp  artnet_sender.hpp  dmx_controller.cpp  dmx_controller.hpp  dmx_preset.cpp  dmx_preset.hpp  dmx_preset_changer.cpp  dmx_preset_changer.hpp  dmx_presets.cpp  dmx_presets.hpp  foot_switch.cpp  foot_switch.hpp  main.cpp  messages.hpp  nvs_storage.cpp  nvs_storage.hpp  osc_sender.cpp  osc_sender.hpp  rtos_task.cpp  rtos_task.hpp  seven_segment_display.cpp  seven_segment_display.hpp  web_server.cpp  web_server.hpp
spiffs/: index.html
spiffs/assets/: index-BIMoyukT.js  index-BO8kQGFM.js  index-DCQwLo36.css
